--- a/notebooks/TestUseCaseGCP.ipynb
+++ b/notebooks/TestUseCaseGCP.ipynb
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "%py_script_open -n ml_text_tokenizer.py -p demo/scripts -o dev"
+    "%py_script_open -n text_tokenizer.py -p demo/scripts -o dev"
    ]
   },
   {
@@ -114,9 +114,9 @@
    "source": [
     "platform = Platform.GCP\n",
     "profile = PySparkJobProfile(root_path='demo/scripts',\n",
-    "                                  bucket='ai4ops',\n",
-    "                                  project='gd-gcp-techlead-experiments',\n",
-    "                                  cluster='ai4ops',\n",
+    "                                  bucket='{name_of_bucket_on_GCP}',\n",
+    "                                  project='{name_of_project_on_GCP}',\n",
+    "                                  cluster='{name_of_cluster_on_GCP}',\n",
     "                                  region='global',\n",
     "                                  ai_region='us-central1-a',\n",
     "                                  job_prefix='demo_job',\n",
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "%py_data -n ml_text_tokenizer.py -p JobProfile -pm $platform -o gs://ai4ops/mldsl/data"
+    "%py_data -n text_tokenizer.py -p JobProfile -pm $platform -o gs://ai4ops/mldsl/data"
    ]
   },
   {
@@ -271,11 +271,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_id = \"gd-gcp-techlead-experiments\"\n",
+    "project_id = \"{name_of_project_on_GCP}\"\n",
     "\n",
     "filters = \"\"\"resource.type:cloud_dataproc_cluster\n",
     "AND timestamp>2020-02-16\n",
-    "AND resource.labels.cluster_name:ai4ops \n",
+    "AND resource.labels.cluster_name:{name_of_cluster_on_GCP}\n",
     "AND jsonPayload.application:application_1590766736446_0002\"\"\""
    ]
   },
@@ -488,7 +488,7 @@
     }
    ],
    "source": [
-    "%%py_script -e -n mr_model.py -p demo/model/words/trainer -o dev/models --epochs 3 --train_path gs://ai4ops/mldsl/data/demo_job_1590767199/train --word_embeds gs://ai4ops/mldsl/data/demo_job_1590767199/words --seq_len 150\n",
+    "%%py_script -e -n mr_model.py -p demo/model/words/trainer -o dev/models --epochs 3 --seq_len 150\n",
     "#!/usr/bin/python\n",
     "\n",
     "import warnings\n",
@@ -661,9 +661,9 @@
    "outputs": [],
    "source": [
     "platform = Platform.GCP\n",
-    "profile = AIProfile(bucket='ai4ops', cluster='ai4ops', region='global', job_prefix='train',\n",
-    "                    root_path='/home/jovyan/work/data/demo/scripts', \n",
-    "                    project='gd-gcp-techlead-experiments',\n",
+    "profile = AIProfile(bucket='{name_of_bucket_on_GCP}', cluster='{name_of_cluster_on_GCP}', region='global', job_prefix='train',\n",
+    "                    root_path='/demo/scripts', \n",
+    "                    project='{name_of_project_on_GCP}',\n",
     "                    ai_region='us-central1', job_async=False,\n",
     "                    package_name='trainer', package_dst='mldsl/packages',\n",
     "                    scale_tier='BASIC', runtime_version='1.15', python_version='3.7')\n",
@@ -791,7 +791,7 @@
     }
    ],
    "source": [
-    "%py_train -n mr_model.py -s demo/model/words -p AIProfile -pm $platform -o gs://ai4ops/mldsl"
+    "%py_train -n mr_model.py -s demo/model/words -p AIProfile -pm $platform -o gs://{bucket}/mldsl"
    ]
   },
   {
@@ -825,15 +825,15 @@
    "outputs": [],
    "source": [
     "platform = Platform.GCP\n",
-    "profile = DeployAIProfile(bucket='ai4ops', cluster='ai4ops', region='global', \n",
+    "profile = DeployAIProfile(bucket='{name_of_bucket_on_GCP}', cluster='{name_of_cluster_on_GCP}', region='global', \n",
     "                          job_prefix='deploy',\n",
-    "                          root_path='/home/jovyan/work/data/demo/deploy', \n",
-    "                          project='gd-gcp-techlead-experiments',\n",
+    "                          root_path='demo/deploy', \n",
+    "                          project='{name_of_project_on_GCP}',\n",
     "                          ai_region='us-central1', job_async=False,\n",
     "                          package_name='', package_dst='staging',\n",
     "                          scale_tier='BASIC', runtime_version='1.15', python_version='3.7',\n",
     "                          model_name = 'mldsl', version_name='v1', is_new_model=False,\n",
-    "                          path_to_saved_model='gs://ai4ops/mldsl/train_1591004612/saved_model/')\n",
+    "                          path_to_saved_model='gs://{bucket}/mldsl/train_1591004612/saved_model/')\n",
     "profile.arguments = {\n",
     "    \"framework\": \"TENSORFLOW\"\n",
     "}\n",
@@ -874,7 +874,6 @@
     "    author='Grid Dynamics ML Engineer',\n",
     "    author_email='griddynamics@griddynamics.com',\n",
     "    url='https://griddynamics.com',\n",
-    "    #scripts = ['predictor.py']\n",
     ")"
    ]
   },
@@ -993,8 +992,8 @@
     "    warnings.simplefilter(\"ignore\")\n",
     "    from utils import *\n",
     "\n",
-    "word_to_index, word_to_vec_map = read_glove_vectors(\"gs://ai4ops/mldsl/data/demo_job_1590767199/words\")\n",
-    "df_x, df_y, l = prepare_dataset('gs://ai4ops/mldsl/data/demo_job_1590767199/train', 150, word_to_index)"
+    "word_to_index, word_to_vec_map = read_glove_vectors(\"gs://{bucket}/mldsl/data/demo_job_1590767199/words\")\n",
+    "df_x, df_y, l = prepare_dataset('gs://{bucket}/mldsl/data/demo_job_1590767199/train', 150, word_to_index)"
    ]
   },
   {
@@ -1115,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
