--- a/notebooks/TestUseCaseAWS.ipynb
+++ b/notebooks/TestUseCaseAWS.ipynb
@@ -60,13 +60,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temporary path: /home/ec2-user/SageMaker/.mldsl/text_tokenizer.py\n"
+      "Temporary path: /Users/apolatovskaya/git/ml-dsl/notebooks/.mldsl/text_tokenizer.py\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<com.griddynamics.dsl.ml.py_script.PyScript at 0x7fde42b5eef0>"
+       "<com.griddynamics.dsl.ml.py_script.PyScript at 0x7fdcf5074b38>"
       ]
      },
      "execution_count": 2,
@@ -75,7 +75,98 @@
     }
    ],
    "source": [
-    "%py_script_open --name text_tokenizer.py --path demo/scripts"
+    "%%py_script --name text_tokenizer.py --path demo/scripts\n",
+    "# %py_load demo/scripts/text_tokenizer.py\n",
+    "#!/usr/bin/python\n",
+    "from pyspark import SQLContext, SparkContext\n",
+    "from pyspark.sql.window import Window\n",
+    "import pyspark.sql.functions as F\n",
+    "from pyspark.sql import Row\n",
+    "from pyspark.sql.types import ArrayType, IntegerType, FloatType\n",
+    "from pyspark.ml.feature import Tokenizer\n",
+    "import argparse\n",
+    "\n",
+    "\n",
+    "def read_glove_vecs(glove_file, output_path):\n",
+    "    rdd = sc.textFile(glove_file)\n",
+    "    row = Row(\"glovevec\")\n",
+    "    df = rdd.map(row).toDF()\n",
+    "    split_col = F.split(F.col('glovevec'), \" \")\n",
+    "    df = df.withColumn('word', split_col.getItem(0))\n",
+    "    df = df.withColumn('splitted', split_col)\n",
+    "    vec_udf = F.udf(lambda row: [float(i) for i in row[1:]], ArrayType(FloatType()))\n",
+    "    df = df.withColumn('vec', vec_udf(F.col('splitted')))\n",
+    "    df = df.drop('splitted', \"glovevec\")\n",
+    "    w = Window.orderBy([\"word\"])\n",
+    "    qdf = df.withColumn('vec', F.concat_ws(',', 'vec')).withColumn(\"id\", F.row_number().over(w))\n",
+    "    \n",
+    "    path = '{}/words'.format(output_path)\n",
+    "    qdf.coalesce(1).write.format('csv').option(\"sep\",\"\\t\").option('header', 'true').save(path)\n",
+    "    print('Words saved to: \"{}\"'.format(path))\n",
+    "    list_words = list(map(lambda row: row.asDict(), qdf.collect()))\n",
+    "    word_to_vec_map = {item['word']: item['vec'] for item in list_words}\n",
+    "    words_to_index = {item['word']:item[\"id\"] for item in list_words}\n",
+    "    index_to_words = {item[\"id\"]: item['word'] for item in list_words}\n",
+    "    return words_to_index, index_to_words, word_to_vec_map\n",
+    "\n",
+    "\n",
+    "def prepare_df(path, const, words_to_index):\n",
+    "    rdd = sc.textFile(path)\n",
+    "    row = Row(\"review\")\n",
+    "    df = rdd.map(row).toDF()\n",
+    "    # Clean text\n",
+    "    df_clean = df.select(F.lower(F.regexp_replace(F.col('review'), \"n't\", \" n't\")).alias('review'))\n",
+    "    df_clean = df_clean.select(F.lower(F.regexp_replace(F.col('review'), \"[^0-9a-zA-Z\\\\s]\", \"\")).alias('review'))\n",
+    "    # Tokenize text\n",
+    "    tokenizer = Tokenizer(inputCol='review', outputCol='words_token')\n",
+    "    df_words_token = tokenizer.transform(df_clean).select('words_token')\n",
+    "    df_cutted = df_words_token.withColumn('length', F.size(F.col('words_token')))\n",
+    "    # Replace word with it's index\n",
+    "    word_udf = F.udf(lambda row: [words_to_index[w] if w in words_to_index.keys()\n",
+    "                                  else words_to_index[\"unk\"] for w in row],\n",
+    "                 ArrayType(IntegerType()))\n",
+    "    df_stemmed = df_cutted.withColumn('words_stemmed', word_udf(F.col('words_token')))\n",
+    "    return df_stemmed.withColumn(\"class\", F.lit(const))\n",
+    "\n",
+    "\n",
+    "def save_dataset(df_pos, df_neg, path):\n",
+    "    df = df_pos.union(df_neg)\n",
+    "    w = Window.orderBy([\"words_stemmed\"])\n",
+    "    df = df.withColumn(\"review_id\", F.row_number().over(w)).withColumn('int_seq',\n",
+    "                                                                       F.concat_ws(',', 'words_stemmed'))\n",
+    "    qdf = df.select(['review_id', 'int_seq', 'class'])\n",
+    "    qdf.coalesce(1).write.format('csv').option('header', 'true').save(path)\n",
+    "\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    parser.add_argument('--train_pos_path', type=str, help=\"train positive reviews path\")\n",
+    "    parser.add_argument('--train_neg_path', type=str, help=\"train negative reviews path\")\n",
+    "    parser.add_argument('--test_pos_path', type=str, help=\"test positive reviews path\")\n",
+    "    parser.add_argument('--test_neg_path', type=str, help=\"test negative reviews path\")\n",
+    "    parser.add_argument('--word_embeds', type=str, help=\"Path to glove word embeddings\")\n",
+    "    parser.add_argument('--output_path', type=str, help=\"Sequences output path\")\n",
+    "    reviews_filter = '9*.txt'\n",
+    "\n",
+    "    args, d = parser.parse_known_args()\n",
+    "    output_path = args.output_path\n",
+    "    SparkContext.setSystemProperty('spark.sql.broadcastTimeout', '36000')\n",
+    "    sc = SparkContext(appName=\"word_tokenizer\").getOrCreate()\n",
+    "    sql = SQLContext(sc)\n",
+    "\n",
+    "    words_to_index, index_to_words, word_to_vec_map = read_glove_vecs(args.word_embeds, output_path)\n",
+    "    \n",
+    "    df_pos = prepare_df(f\"{args.train_pos_path}/{reviews_filter}\", 1, words_to_index)\n",
+    "    df_neg = prepare_df(f\"{args.train_neg_path}/{reviews_filter}\", 0, words_to_index)\n",
+    "    train_path = '{}/train'.format(output_path)\n",
+    "    save_dataset(df_pos, df_neg, train_path)\n",
+    "    print('Train saved to: \"{}\"'.format(train_path))\n",
+    "\n",
+    "    df_pos = prepare_df(f\"{args.train_pos_path}/{reviews_filter}\", 1, words_to_index)\n",
+    "    df_neg = prepare_df(f\"{args.train_neg_path}/{reviews_filter}\", 0, words_to_index)\n",
+    "    test_path = '{}/test'.format(output_path)\n",
+    "    save_dataset(df_pos, df_neg, test_path)\n",
+    "    print('Test saved to: \"{}\"'.format(test_path))\n"
    ]
   },
   {
@@ -85,17 +176,29 @@
    "outputs": [],
    "source": [
     "platform = Platform.AWS\n",
-    "profile = PySparkJobProfile(bucket='mldsl-test', cluster='j-3G5O03TP7HCYO',region='global',job_prefix='movie_review_job',\n",
-    "                            root_path='demo/scripts', project=None, ai_region='us-east-1', job_async=False)\n",
-    "profile.args=profile.load_profile_data(\"demo/spark_job_args_aws.json\")\n",
-    "profile.packages=[\"com.amazonaws:aws-java-sdk-pom:1.10.34\", \"org.apache.hadoop:hadoop-aws:2.6.0\"]\n",
-    "\n",
-    "PySparkJobProfile.set('JobProfile', profile)"
+    "profile = PySparkJobProfile(bucket='mldsl-test', \n",
+    "                            cluster='j-IUSED1D1H8F6',\n",
+    "                            region='global',\n",
+    "                            job_prefix='movie_review_job',\n",
+    "                            root_path='demo/scripts', project=None, ai_region='us-east-1', \n",
+    "                            job_async=False,\n",
+    "                            use_cloud_engine_credentials='SageMakerRoleMlDsl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.args=profile.load_profile_data(\"demo/spark_job_args_aws.json\")\n",
+    "profile.packages=[\"com.amazonaws:aws-java-sdk-pom:1.10.34\", \"org.apache.hadoop:hadoop-aws:2.6.0\"]\n",
+    "PySparkJobProfile.set('JobProfile', profile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,43 +207,17 @@
      "text": [
       "Parameters string = <<<-n text_tokenizer.py -p JobProfile -pm 2 -o s3://mldsl-test/movie>>>\n",
       "mldsl-test\n",
-      "Uploaded text_tokenizer.py to s3://mldsl-test/emr/j-3G5O03TP7HCYO/movie_review_job_1591271779/text_tokenizer.py\n",
-      "Submitting movie_review_job_1591271779 to cluster j-3G5O03TP7HCYO\n",
-      "Step movie_review_job_1591271779 change state to PENDING\n",
-      "Step movie_review_job_1591271779 change state to RUNNING\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "An error occurred (ThrottlingException) when calling the DescribeStep operation (reached max retries: 4): Rate exceeded\n",
-      "Step movie_review_job_1591271779 change state to COMPLETED\n"
+      "Uploaded text_tokenizer.py to s3://mldsl-test/emr/j-IUSED1D1H8F6/movie_review_job_1592237415/text_tokenizer.py\n",
+      "Submitting movie_review_job_1592237415 to cluster j-IUSED1D1H8F6\n",
+      "Step movie_review_job_1592237415 change state to PENDING\n",
+      "Step movie_review_job_1592237415 change state to RUNNING\n",
+      "Step movie_review_job_1592237415 change state to COMPLETED\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<a href=\"https://console.aws.amazon.com/s3/buckets/mldsl-test/emr/j-3G5O03TP7HCYO/steps/s-3MU0Q167U82ZL/?region=global\">Output Data movie_review_job_1591271779</a>"
+       "<a href=\"https://console.aws.amazon.com/s3/buckets/mldsl-test/emr/j-IUSED1D1H8F6/steps/s-38XDD6Q6YGMEB/?region=global\">Output Data movie_review_job_1592237415</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -153,16 +230,16 @@
      "data": {
       "application/json": {
        "labels": {},
-       "output_resource_uri": "s3n://aws-logs-592068120969-us-east-1/elasticmapreduce/j-3G5O03TP7HCYO/steps/s-3MU0Q167U82ZL",
+       "output_resource_uri": "s3n://aws-logs-592068120969-us-east-1/elasticmapreduce/j-IUSED1D1H8F6/steps/s-38XDD6Q6YGMEB",
        "placement": {
-        "cluster_id": "j-3G5O03TP7HCYO",
-        "step_id": "s-3MU0Q167U82ZL"
+        "cluster_id": "j-IUSED1D1H8F6",
+        "step_id": "s-38XDD6Q6YGMEB"
        },
        "pyspark_job": {
         "archive_uris": [],
         "args": [
          "--output_path",
-         "s3://mldsl-test/movie/movie_review_job_1591271779",
+         "s3://mldsl-test/movie/movie_review_job_1592237415",
          "--train_pos_path",
          "s3://mldsl-test/aclImdb/train/pos",
          "--train_neg_path",
@@ -179,18 +256,18 @@
         "logging_config": {
          "driver_log_levels": {}
         },
-        "main_python_file_uri": "s3://mldsl-test/emr/j-3G5O03TP7HCYO/movie_review_job_1591271779/text_tokenizer.py",
+        "main_python_file_uri": "s3://mldsl-test/emr/j-IUSED1D1H8F6/movie_review_job_1592237415/text_tokenizer.py",
         "properties": {},
         "python_file_uris": [
-         "s3://mldsl-test/emr/j-3G5O03TP7HCYO/movie_review_job_1591271779/<com.griddynamics.dsl.ml.py_script.PyScript object at 0x7fde42b5eef0>"
+         "s3://mldsl-test/emr/j-IUSED1D1H8F6/movie_review_job_1592237415/<com.griddynamics.dsl.ml.py_script.PyScript object at 0x7fdcf5074b38>"
         ]
        },
        "reference": {
-        "job_id": "movie_review_job_1591271779"
+        "job_id": "movie_review_job_1592237415"
        },
        "status": {
         "state": "COMPLETED",
-        "state_start_time": "2020-06-04T11:56:28.119000"
+        "state_start_time": "2020-06-15T19:10:25.329000"
        }
       },
       "text/plain": [
@@ -199,7 +276,8 @@
      },
      "metadata": {
       "application/json": {
-       "expanded": false
+       "expanded": false,
+       "root": "root"
       }
      },
      "output_type": "display_data"
@@ -215,8 +293,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Use job_movie_review_job_1591271779 instance to browse job properties.\n",
-    "#job_movie_review_job_1591271779 = job_tracker['movie_review_job_1591271779']"
+    "#Use job_movie_review_job_1592237415 instance to browse job properties.\n",
+    "#job_movie_review_job_1592237415 = job_tracker['movie_review_job_1592237415']"
    ]
   },
   {
@@ -917,9 +995,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -931,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
